# zoho-expense-creator

./: .cursorrules  .gitignore  README.md  pyproject.toml
app/: flow.py  streamlit.py  web.py
app/models/: expense.py
app/nodes/: decide.py  expense.py  prepare.py  process.py  process_image.py  process_pdf.py  upload.py  vendor.py
app/utils/: gemini_client.py
docs/: design.md
